<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".categories.CategoriesFragment">

    <data>
        <import type="android.view.View" />
        <import type="com.example.triviaproject.utils.Status" />
        <variable
            name="viewModel"
            type="com.example.triviaproject.categories.CategoriesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/choose_category_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/extra_large_margin"
            android:layout_marginTop="@dimen/extra_large_margin"
            android:text="@string/choose_category"
            android:textAllCaps="true"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="@{(viewModel.status == Status.DONE_SUCCESS) ? View.VISIBLE : View.GONE}" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_out_button"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:gravity="center_horizontal"
            android:text="@string/sign_out"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/choose_category_text"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="@{(viewModel.status == Status.DONE_SUCCESS) ? View.VISIBLE : View.GONE}" />

        <SearchView
            android:id="@+id/categories_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/extra_large_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginEnd="@dimen/small_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_out_button"
            android:visibility="@{(viewModel.status == Status.DONE_SUCCESS) ? View.VISIBLE : View.GONE}" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categories_recycler"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/extra_large_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginBottom="@dimen/extra_large_margin"
            app:categoriesList="@{viewModel.categories}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categories_search"
            android:visibility="@{(viewModel.status == Status.DONE_SUCCESS) ? View.VISIBLE : View.GONE}" />

        <ProgressBar
            android:id="@+id/categories_loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/md_theme_light_tertiary"
            android:progressBackgroundTint="@color/md_theme_light_tertiary"
            android:progressTint="@color/md_theme_light_tertiary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="@{(viewModel.status == Status.ONGOING) ? View.VISIBLE : View.GONE}" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="@{(viewModel.status == Status.DONE_FAILURE) ? View.VISIBLE : View.GONE}" >

            <TextView
                android:id="@+id/fail_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="@string/failed_categories"
                android:textSize="@dimen/medium_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/retry_button"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/medium_margin"
                android:gravity="center"
                android:text="@string/retry"
                android:textSize="@dimen/small_text"
                android:onClick="@{() -> viewModel.getCategories()}" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
